adjust interview